--- a/orion/blueprints/personas/templates/personas/edit_datos_personales.jinja2
+++ b/orion/blueprints/personas/templates/personas/edit_datos_personales.jinja2
@@ -5,7 +5,7 @@
 {% block title %}Editar Datos Personales {{ persona.nombre_completo }}{% endblock %}
 
 {% block topbar_actions %}
-    {{ topbar.page('Editar Datos Personales ' + persona.nombre_completo) }}
+    {{ topbar.page('Editar Datos Personales') }}
 {% endblock %}
 
 {% block content %}
